# coolkit

./: .gitignore  CMakeLists.txt  LICENSE  fmt-main.cpp  indentos.h  macro.h  main.cpp  memstat.h  pprint.h
include/coolkit/: ansi.h  enum.h  fmtstruct.h  indentos.h  macro.h  memstat.h  pprint.h  structinfo.h  to_tuple.h
